start user list entrtrypoint
